# ifcb-analysis

./: .gitignore  README.md  environment.yml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test-environment.yml
src/matlab/analyze_by_class/: summary_plots2.m
src/python/: requirements.txt
src/python/ifcb_features/: all.py  biovolume.py  blobs.py  classify.py  featureio.py  hog.py  morphology.py  ringwedge.py  segmentation.py
src/python/ifcb_features/scripts/: process_bins.py
src/python/scripts/: process-bin.py  workspace.code-workspace
src/python/tests/: test_featurio-io.py  test_process-bin.py
src/python/tests/data/: D20141117T234033_IFCB102.adc  D20141117T234033_IFCB102.hdr  scwharf-class-names.txt
src/python/tests/data/reference/: D20141117T234033_IFCB102_class.h5  D20141117T234033_IFCB102_class_v2.csv  D20141117T234033_IFCB102_class_v3.h5  D20141117T234033_IFCB102_fea_v2.csv
