[metadata]
name = ifcb-features
version = 0.0.2
description = Package to extract features from IFCB data
url = https://github.com/yosoyjay/ifcb-analysis/tree/main
classifiers =
    Programming Langugage :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
license = MIT
license_file = LICENSE

[sdist]
formats = gztar, zip

[check-manifest]
ignore =
    *.m
    *.yaml
    *.yml
    src/matlab

[options]
install_requires =
    cython >= 0.29
    numpy >= 1.16
    pandas
    phasepack
# temporarily disable during port because it is building numpy for some reason
#    pyfftw >= 0.13.0
    scikit-image
    scipy >= 1.4
package_dir =
    = src/python
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src/python