[metadata]
name = ifcb-features
version = 0.0.2
description = Package to extract features from IFCB data
url = https://github.com/yosoyjay/ifcb-analysis/tree/main
classifiers =
    Programming Langugage :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
license = MIT
license_file = LICENSE

[sdist]
formats = gztar, zip

[check-manifest]
ignore =
    *.m
    *.yaml
    *.yml
    src/matlab

[options]
install_requires =
    cython >= 0.29
    numpy >= 1.16
    pandas
    phasepack
    scikit-image
    scipy >= 1.4
# No package on pypi for pyifcb
# won't work on aarch64 because h5py won't build
    pyifcb @ git+https://github.com/joefutrelle/pyifcb.git
# Needed for model
    tensorflow
extra_requires =
    pyfftw >= 0.13.0

package_dir =
    = src/python
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src/python

[options.entry_points]
console_scripts =
    process-bins = ifcb_features.scripts.process_bins:cli
